# signer

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci-checks.yaml
src/signer/: pdf_creator.py
