[project]
name = "signer"
description = "Project that creates a signed Attendance sheet"
version = "0.1.0"
authors = [
    { name = "Viktor Vorobev", email = "vikeyer@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "fpdf2==2.7.9",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "mypy>=1.3.0",
    "ruff>=0.6.7",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
